syntax = "proto3";

package protos;

import "sp_notify.proto";
import "steps/sp_steps_custom.proto";
import "steps/sp_steps_decode.proto";
import "steps/sp_steps_detective.proto";
import "steps/sp_steps_encode.proto";
import "steps/sp_steps_httprequest.proto";
import "steps/sp_steps_inferschema.proto";
import "steps/sp_steps_kv.proto";
import "steps/sp_steps_schema_validation.proto";
import "steps/sp_steps_transform.proto";
import "steps/sp_steps_valid_json.proto";

option go_package = "github.com/streamdal/streamdal/libs/protos/build/go/protos";

// Pipeline is a structure that holds one or more pipeline steps. This structure
// is intended to be immutable; clients are expected to generate WASMRequest's
// that contain a pipeline step.
message Pipeline {
  // ID should NOT be set by external gRPC client on CreatePipelineRequest - it
  // will be ignored; it _does_ need to be set on UpdatePipelineRequest.
  string id = 1;

  // Friendly name for the pipeline
  string name = 2;

  // One or more steps to execute
  repeated PipelineStep steps = 3;

  // Notification configs for this pipeline. Only filled out
  // in external API responses
  repeated protos.NotificationConfig _notification_configs = 4; // protolint:disable:this FIELD_NAMES_LOWER_SNAKE_CASE
}

// A condition defines how the SDK should handle a step response -- should it
// continue executing the pipeline, should it abort, should it notify the server?
// Each step can have multiple conditions.
enum PipelineStepCondition {
  PIPELINE_STEP_CONDITION_UNSET = 0;

  // Abort executing the current pipeline AND continue executing any other pipelines
  PIPELINE_STEP_CONDITION_ABORT_CURRENT = 1;

  // Notify the server about the step condition
  PIPELINE_STEP_CONDITION_NOTIFY = 2;

  // Abort executing ALL pipelines
  PIPELINE_STEP_CONDITION_ABORT_ALL = 3;

  PIPELINE_STEP_CONDITION_DISCARD_MESSAGE = 4;
}

// A pipeline step is a single step in a pipeline.
message PipelineStep {
  // Friendly name for the step
  string name = 1;

  // SDKs should read this when WASM returns success to determine what to do next
  repeated PipelineStepCondition on_success = 2;

  // SDKs should read this when WASM returns failure to determine what to do next
  repeated  PipelineStepCondition on_failure = 3;

  oneof step {
    steps.DetectiveStep detective = 1000;
    steps.TransformStep transform = 1001;
    steps.EncodeStep encode = 1002;
    steps.DecodeStep decode = 1003;
    steps.CustomStep custom = 1004;
    steps.HttpRequestStep http_request = 1005;
    steps.KVStep kv = 1006;
    steps.InferSchemaStep infer_schema = 1007;
    steps.ValidJSONStep valid_json = 1008;
    steps.SchemaValidationStep schema_validation = 1009;
  }

  // ID is a uuid(sha256(_wasm_bytes)) that is set by server
  optional string _wasm_id = 10000; // protolint:disable:this FIELD_NAMES_LOWER_SNAKE_CASE

  // WASM module bytes (set by server)
  optional bytes _wasm_bytes = 10001; // protolint:disable:this FIELD_NAMES_LOWER_SNAKE_CASE

  // WASM function name to execute (set by server)
  optional string _wasm_function = 10002; // protolint:disable:this FIELD_NAMES_LOWER_SNAKE_CASE
}
